// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatchBottomDock visual guard > renders announcements, hand cards and command lane 1`] = `
<div
  class="MuiBox-root css-gvrn72"
>
  <div
    class="MuiStack-root css-fm002g-MuiStack-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-110nfx-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1em705f"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-tn23hq-MuiTypography-root"
        >
          Envido
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-zemrrq-MuiTypography-root"
        >
          Truco
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1hyk470-MuiTypography-root"
        >
          Quiero
        </p>
      </div>
      <button
        aria-label="Abrir chat"
        class="MuiBox-root css-1w9hfqj"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cesefj-MuiSvgIcon-root"
          data-testid="ChatBubbleOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H6l-2 2V4h16z"
          />
        </svg>
        <span
          class="MuiBox-root css-0"
        >
          Chat
        </span>
      </button>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1jutl6g-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-8hnoxy"
      >
        <div
          class="MuiStack-root css-w34giv-MuiStack-root"
        >
          <div
            class="truco-play-card-interactive MuiBox-root css-1mu6sn7"
            data-can-play="true"
            data-testid="playable-match-card-0"
          >
            <div
              data-testid="game-card"
            >
              1e
            </div>
          </div>
          <div
            class="truco-play-card-interactive MuiBox-root css-1bpgqu3"
            data-can-play="true"
            data-testid="playable-match-card-1"
          >
            <div
              data-testid="game-card"
            >
              7o
            </div>
          </div>
          <div
            class="truco-play-card-interactive MuiBox-root css-6i6odz"
            data-can-play="true"
            data-testid="playable-match-card-2"
          >
            <div
              data-testid="game-card"
            >
              3c
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-1gzodx9"
      />
      <div
        class="MuiBox-root css-252dd9"
      >
        <div
          class="MuiBox-root css-1ai17t5"
        >
          <div
            class="MuiBox-root css-inwa5g"
          >
            <div
              class="MuiBox-root css-16xd1m7"
            >
              <div
                class="MuiBox-root css-1mefu91"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1n3o1rv-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Truco!
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatchBottomDock visual guard > renders spectator waiting mode with hidden hand placeholders 1`] = `
<div
  class="MuiBox-root css-gvrn72"
>
  <div
    class="MuiStack-root css-fm002g-MuiStack-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-110nfx-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1em705f"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1nepzin-MuiTypography-root"
        >
          -
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-tn23hq-MuiTypography-root"
        >
          -
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1fmiq20-MuiTypography-root"
        >
          Sin anuncios
        </p>
      </div>
      <button
        aria-label="Abrir chat"
        class="MuiBox-root css-1w9hfqj"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cesefj-MuiSvgIcon-root"
          data-testid="ChatBubbleOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H6l-2 2V4h16z"
          />
        </svg>
        <span
          class="MuiBox-root css-0"
        >
          Chat
        </span>
      </button>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1jutl6g-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-8hnoxy"
      >
        <div
          class="MuiStack-root css-w34giv-MuiStack-root"
        >
          <div
            class="MuiBox-root css-9kf9gm"
          />
        </div>
      </div>
      <div
        class="MuiBox-root css-1gzodx9"
      />
      <div
        class="MuiBox-root css-252dd9"
      >
        <div
          class="MuiBox-root css-1ai17t5"
        >
          <div
            class="MuiBox-root css-inwa5g"
          >
            <div
              class="MuiBox-root css-nz8yh0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1sz6cep-MuiTypography-root"
              >
                Modo Espectador
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
